more bootstrap comparisons

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -942,7 +942,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cuts_dict = {\"R\":[0,2],\"b\":[3,3.01],\"l\":[-2,2],\"age\":[4,7]}\n",
+    "# cuts_dict = {\"R\":[0,2],\"b\":[3,3.01],\"l\":[-2,2],\"age\":[4,7]}\n",
+    "cuts_dict = {\"R\":[0,2],\"b\":[3,3.01],\"l\":[-2,2],\"age\":[9.5,10]}\n",
     "\n",
     "df = MF.apply_cuts_to_df(df0, cuts_dict=cuts_dict)\n",
     "\n",
@@ -952,7 +953,7 @@
     "print(len(df))\n",
     "\n",
     "function_dict = all_funcs_dict\n",
-    "repeats = 5000"
+    "repeats = 10000"
    ]
   },
   {
@@ -962,81 +963,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = (vx,vy)\n",
-    "function = CV.calculate_tilt\n",
-    "R_hat=None\n",
-    "tilt=True\n",
-    "absolute=True\n",
-    "\n",
-    "res = stats.bootstrap(\n",
-    "        data=data,\n",
-    "        statistic=lambda vx,vy: error_helpers.apply_function(function=function,vx=vx,vy=vy, R_hat=R_hat, tilt=tilt, absolute=absolute),\n",
-    "        n_resamples=5000,\n",
-    "        vectorized=False,\n",
-    "        paired=True,\n",
-    "        confidence_level=0.68,\n",
-    "        method=\"BCa\"\n",
-    "    )\n",
-    "\n",
-    "true_value = error_helpers.apply_function(function=function,vx=vx,vy=vy, R_hat=R_hat, tilt=tilt, absolute=absolute)\n",
-    "\n",
-    "bootstrap_distribution = res.bootstrap_distribution\n",
-    "ci = res.confidence_interval"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax=plt.subplots()\n",
-    "\n",
-    "h = ax.hist(res.bootstrap_distribution,bins=50)\n",
-    "ax.axvline(x=true_value,color=\"red\")\n",
-    "ax.axvline(x=np.median(res.bootstrap_distribution),color=\"green\")\n",
-    "\n",
-    "ax.fill_between(x=ci,y1=[0,0],y2=2*[max(h[0])],color=\"orange\",alpha=0.3)\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_error_methods(df, func_name, function, repeats, ax, hist_range=None, common_labels_on=False):\n",
+    "def compare_error_methods(df, func_name, function, repeats, ax, hist_range=None, common_labels_on=False, tilt=False,absolute=True,R_hat=None):\n",
     "    n = len(df)\n",
     "    vx = df.vr.values\n",
     "    vy = df.vl.values\n",
     "    \n",
-    "    true_value = function(vx,vy)\n",
+    "    true_value = error_helpers.apply_function(vx=vx,vy=vy,function=function,tilt=tilt,absolute=absolute,R_hat=R_hat)\n",
     "    \n",
-    "    our_boot = bootstrap.get_std_bootstrap(vx=vx,vy=vy,function=function,bootstrapconfig=BootstrapConfig(repeats=repeats,symmetric=False))\n",
-    "    scipy_boot = stats.bootstrap((vx,vy), function, paired=True, vectorized=False, n_resamples=repeats, method='BCa', confidence_level=0.68)\n",
+    "    our_res = bootstrap.get_std_bootstrap(vx=vx,vy=vy,function=function,config=BootstrapConfig(repeats=repeats,symmetric=False),tilt=tilt,absolute=absolute,R_hat=R_hat)\n",
+    "    scipy_res = bootstrap.scipy_bootstrap(vx=vx,vy=vy,function=function,config=BootstrapConfig(repeats=repeats),tilt=tilt,absolute=absolute,R_hat=R_hat)\n",
     "    \n",
     "    # plot\n",
-    "    our_distribution, our_CI = our_boot.bootstrap_distribution, our_boot.confidence_interval\n",
-    "    scipy_distribution, scipy_CI = scipy_boot.bootstrap_distribution, scipy_boot.confidence_interval\n",
+    "    our_distribution, our_CI, our_se = our_res.bootstrap_distribution, our_res.confidence_interval, our_res.standard_error\n",
+    "    scipy_distribution, scipy_CI, scipy_se = scipy_res.bootstrap_distribution, scipy_res.confidence_interval, scipy_res.standard_error\n",
+    "    \n",
+    "    bootstrap_mean = np.mean(our_distribution)\n",
     "        \n",
     "    ax.hist(our_distribution,bins=75,label=\"Ours\" if common_labels_on else None, alpha=0.5,color=\"blue\",range=hist_range)\n",
     "    ax.hist(scipy_distribution,bins=75,color=\"orange\",label=\"SciPy\" if common_labels_on else None, alpha=0.5,range=hist_range)\n",
     "\n",
-    "    ax.axvline(x=true_value,color=\"red\",label=\"True value\" if common_labels_on else None)\n",
+    "    ax.axvline(x=true_value,alpha=0.5,color=\"green\",label=\"True value\" if common_labels_on else None)\n",
+    "    ax.axvline(x=np.mean(our_distribution),alpha=0.5,color=\"cyan\",label=\"Bootstrap mean\" if common_labels_on else None)\n",
+    "    ax.axvline(x=np.median(our_distribution),alpha=0.5,color=\"red\",label=\"Bootstrap median\" if common_labels_on else None)\n",
+    "    ax.axvline(x=np.mean(scipy_CI),alpha=0.5,color=\"orange\",linestyle=\"--\",label=\"Scipy CI centre\" if common_labels_on else None)\n",
     "    \n",
     "    ax.axvline(x=scipy_CI[0],color=\"orange\",label=\"SciPy CI\" if common_labels_on else None)\n",
     "    ax.axvline(x=scipy_CI[1],color=\"orange\")\n",
-    "    \n",
-    "    shift = true_value - np.median(scipy_distribution)\n",
-    "    ax.axvline(x=scipy_CI[0] + shift,color=\"orange\",label=\"Shifted SciPy CI\" if common_labels_on else None, linestyle=\"-.\")\n",
-    "    ax.axvline(x=scipy_CI[1] + shift,color=\"orange\", linestyle=\"-.\")\n",
     "\n",
-    "    ax.axvline(x=true_value-our_CI[0],color=\"blue\",linestyle=\"--\", label=\"Our CI\" if common_labels_on else None)\n",
-    "    ax.axvline(x=true_value+our_CI[1],color=\"blue\",linestyle=\"--\")\n",
+    "    ax.axvline(x=true_value-our_CI[0],color=\"blue\",linestyle=\"-\", label=\"Our CI\" if common_labels_on else None)\n",
+    "    ax.axvline(x=true_value+our_CI[1],color=\"blue\",linestyle=\"-\")\n",
+    "    \n",
+    "    ax.axvline(x=np.percentile(our_distribution,16),color=\"k\",linestyle=\"dotted\", label=\"Percentile CI\" if common_labels_on else None)\n",
+    "    ax.axvline(x=np.percentile(our_distribution,84),color=\"k\",linestyle=\"dotted\")\n",
+    "    \n",
+    "    ax.axvline(x=bootstrap_mean-our_se,color=\"magenta\",linestyle=\"--\", label=\"Standard error\" if common_labels_on else None)\n",
+    "    ax.axvline(x=bootstrap_mean+our_se,color=\"magenta\",linestyle=\"--\")\n",
+    "    \n",
+    "    our_symmetric_CI = error_helpers.build_confidence_interval(values=our_distribution,central_value=true_value,symmetric=True)\n",
+    "    \n",
+    "    ax.axvline(x=true_value-our_symmetric_CI[0],color=\"pink\",linestyle=\"--\", label=\"Our symmetric CI\" if common_labels_on else None)\n",
+    "    ax.axvline(x=true_value+our_symmetric_CI[1],color=\"pink\",linestyle=\"--\")\n",
     "    \n",
     "    if func_name == \"tilt_abs\": # Roca-Fabrega\n",
     "        \n",
@@ -1049,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,19 +1026,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
     "fig,axs = plt.subplots(figsize=(10,20),nrows=3)\n",
     "\n",
-    "hist_ranges = [None, None, [-45,0]]\n",
+    "legend_rows = [0,1,2]\n",
+    "\n",
+    "hist_ranges = [None, None, [-45,10]]\n",
     "for i,(func_name,func) in enumerate(function_dict.items()):\n",
-    "    compare_error_methods(df=df, func_name=func_name, function=func, repeats=repeats, ax=axs[i], hist_range=hist_ranges[i], common_labels_on=i==0)\n",
+    "    compare_error_methods(df=df, func_name=func_name, function=func, repeats=repeats, ax=axs[i], hist_range=hist_ranges[i], common_labels_on=i in legend_rows)\n",
     "    axs[i].set_xlabel(titles_dict[func_name])\n",
     "    axs[i].set_ylabel(r\"N\")\n",
     "    \n",
-    "    if i!=1:\n",
+    "    if i in legend_rows or i == len(function_dict):\n",
     "        axs[i].legend()\n",
     "    \n",
     "if True: # filename, save, show\n",
@@ -1096,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65",
+   "id": "63",
    "metadata": {},
    "source": [
     "### Normal vs vectorised (ours)"
@@ -1105,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1116,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1206,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73",
+   "id": "71",
    "metadata": {},
    "source": [
     "## Different-N histograms"
@@ -1264,7 +1232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1274,7 +1242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1298,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1338,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1416,7 +1384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80",
+   "id": "78",
    "metadata": {},
    "source": [
     "## Bias vs N"
@@ -1425,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1466,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,7 +1472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1515,7 +1483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90",
+   "id": "88",
    "metadata": {},
    "source": [
     "## Error vs N"
@@ -1646,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1669,7 +1637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93",
+   "id": "91",
    "metadata": {},
    "source": [
     "### Save"
@@ -1678,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1688,7 +1656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1712,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1724,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1919,7 +1887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98",
+   "id": "96",
    "metadata": {},
    "source": [
     "### Plot"
@@ -1928,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1943,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1984,7 +1952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "101",
+   "id": "99",
    "metadata": {},
    "source": [
     "#### In bulk"
@@ -1993,7 +1961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2189,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2200,7 +2168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2227,7 +2195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2270,7 +2238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2291,7 +2259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107",
+   "id": "105",
    "metadata": {},
    "source": [
     "#### Individually"
@@ -2300,7 +2268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2310,7 +2278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2320,7 +2288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2351,7 +2319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2379,7 +2347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2413,7 +2381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2444,7 +2412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2477,7 +2445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2493,7 +2461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2506,7 +2474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2525,7 +2493,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2556,7 +2524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2573,7 +2541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2591,7 +2559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2613,7 +2581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2631,7 +2599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2641,7 +2609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2652,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2904,7 +2872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": []
