more complete comparison

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -51,7 +51,8 @@
     "import scipy.stats as stats\n",
     "\n",
     "import os\n",
-    "from collections import namedtuple"
+    "from collections import namedtuple\n",
+    "import warnings"
    ]
   },
   {
@@ -831,7 +832,7 @@
    "id": "54",
    "metadata": {},
    "source": [
-    "# Standard error"
+    "# Bootstrap"
    ]
   },
   {
@@ -841,16 +842,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bootstrap_multiple_sampling_sizes(df, function, sampling_sizes, bootstrapconfig, tilt=False, absolute=True, verbose=True):\n",
+    "def bootstrap_multiple_sampling_sizes(df, function, sampling_sizes, config, tilt=False, absolute=True, verbose=True):\n",
     "    \n",
     "    confidence_intervals = np.full(shape=(len(sampling_sizes),2), fill_value=np.nan)\n",
-    "    bootstrap_distributions = np.full(shape=(len(sampling_sizes),bootstrapconfig.repeats), fill_value=np.nan)\n",
+    "    bootstrap_distributions = np.full(shape=(len(sampling_sizes),config.repeats), fill_value=np.nan)\n",
     "    standard_errors = np.full(shape=len(sampling_sizes), fill_value=np.nan)\n",
     "    biases = np.full(shape=len(sampling_sizes), fill_value=np.nan)\n",
     "    \n",
     "    for s,size in enumerate(sampling_sizes):\n",
-    "        bootstrapconfig.sample_size = size\n",
-    "        res = bootstrap.get_std_bootstrap(function=function,vx=df.vr.values,vy=df.vl.values,tilt=tilt,absolute=absolute,bootstrapconfig=bootstrapconfig)\n",
+    "        config.sample_size = size\n",
+    "        res = bootstrap.get_std_bootstrap(function=function,vx=df.vr.values,vy=df.vl.values,tilt=tilt,absolute=absolute,config=config)\n",
     "        \n",
     "        confidence_intervals[s] = res.confidence_interval\n",
     "        bootstrap_distributions[s] = res.bootstrap_distribution\n",
@@ -878,21 +879,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bootstrap_multiple_sampling_sizes_recursive(df, function, sampling_sizes, bootstrapconfig, nested_bootstrapconfig=None, tilt=False, absolute=True, verbose=True):\n",
+    "def bootstrap_multiple_sampling_sizes_recursive(df, function, sampling_sizes, config, nested_config=None, tilt=False, absolute=True, verbose=True):\n",
     "    \n",
     "    confidence_intervals = np.full(shape=(len(sampling_sizes),2), fill_value=np.nan)\n",
     "    standard_errors = np.full(shape=len(sampling_sizes), fill_value=np.nan)\n",
     "    biases = np.full(shape=len(sampling_sizes), fill_value=np.nan)\n",
     "    \n",
-    "    nested_confidence_intervals = np.full(shape=(len(sampling_sizes), bootstrapconfig.repeats, 2), fill_value=np.nan)\n",
-    "    nested_standard_errors = np.full(shape=(len(sampling_sizes),bootstrapconfig.repeats), fill_value=np.nan)\n",
-    "    nested_biases = np.full(shape=(len(sampling_sizes), bootstrapconfig.repeats), fill_value=np.nan)\n",
+    "    nested_confidence_intervals = np.full(shape=(len(sampling_sizes), config.repeats, 2), fill_value=np.nan)\n",
+    "    nested_standard_errors = np.full(shape=(len(sampling_sizes),config.repeats), fill_value=np.nan)\n",
+    "    nested_biases = np.full(shape=(len(sampling_sizes), config.repeats), fill_value=np.nan)\n",
     "    \n",
     "    for s,size in enumerate(sampling_sizes):\n",
-    "        bootstrapconfig.sample_size = size\n",
+    "        config.sample_size = size\n",
     "        \n",
-    "        res = bootstrap.get_std_bootstrap(function=function,vx=df.vr.values,vy=df.vl.values,tilt=tilt,absolute=absolute,\\\n",
-    "                                          bootstrapconfig=bootstrapconfig, nested_bootstrapconfig=nested_bootstrapconfig)\n",
+    "        res = bootstrap.get_std_bootstrap_recursive(function=function,vx=df.vr.values,vy=df.vl.values,tilt=tilt,absolute=absolute,\\\n",
+    "                                          config=config, nested_config=nested_config)\n",
     "        \n",
     "        confidence_intervals[s] = res.confidence_interval\n",
     "        standard_errors[s] = res.standard_error\n",
@@ -922,7 +923,7 @@
    "id": "57",
    "metadata": {},
    "source": [
-    "## Comparison of methods"
+    "## Method comparison"
    ]
   },
   {
@@ -1226,7 +1227,7 @@
    "id": "71",
    "metadata": {},
    "source": [
-    "## Different-N histograms"
+    "## Sampling distributions"
    ]
   },
   {
@@ -1608,7 +1609,7 @@
    "id": "88",
    "metadata": {},
    "source": [
-    "## Error vs N"
+    "## Assumption test"
    ]
   },
   {
@@ -1618,7 +1619,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = general_path+\"graphs/other_plots/downsampling_errors/with_replacement/\""
+    "base_path = general_path+\"graphs/other_plots/bootstapping/assumption_test/\""
    ]
   },
   {
@@ -1650,7 +1651,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repeats = 1000"
+    "repeats = 5000"
    ]
   },
   {
@@ -1660,11 +1661,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_sample_bootstrap_errors = True\n",
-    "# save_sample_bootstrap_errors = False\n",
+    "save_bootstrap_errors = True\n",
+    "# save_bootstrap_errors = False\n",
     "\n",
-    "# save_bootstrap_bool = True\n",
-    "save_bootstrap_bool = False\n",
+    "# save_bootstrap_fullsize_bool = True\n",
+    "save_bootstrap_fullsize_bool = False\n",
     "\n",
     "# save_MC_bool = True\n",
     "save_MC_bool = False\n",
@@ -1693,6 +1694,23 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampling_config = BootstrapConfig(repeats=repeats,symmetric=False,replace=True)\n",
+    "bootstrap_config = BootstrapConfig(repeats=repeats,symmetric=False,replace=True)\n",
+    "\n",
+    "bootstrap_vectorised = True\n",
+    "# bootstrap_vectorised = False\n",
+    "\n",
+    "if save_bootstrap_fullsize_bool and bootstrap_vectorised:\n",
+    "    warnings.warn(\"Set a batch_size when applying vectorised bootstrap with the full dataframe size otherwise the process will hog all the memory\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,26 +1754,26 @@
     "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
     "\n",
     "#     },\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\": [4,7]},\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\": [4,7]},\n",
     "\n",
-    "    },\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\":[9.5,10]},\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
     "\n",
-    "    },\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,2],\"b\":[1.5,2],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\": [4,7]},\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,2],\"b\":[1.5,2],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\": [4,7]},\n",
     "\n",
-    "    },\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,2],\"b\":[1.5,2],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\":[9.5,10]},\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,2],\"b\":[1.5,2],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
     "\n",
-    "    },\n",
+    "#     },\n",
     "#     {\n",
     "#         \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[3,6]},\n",
     "#         \"pop_cuts\": {\"age\": [4,7]},\n",
@@ -1776,6 +1794,16 @@
     "\n",
     "    },\n",
     "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\": [4,7]},\n",
+    "\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,2],\"b\":[3,6],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
+    "\n",
+    "#     },\n",
+    "#     {\n",
     "#         \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[3,6],\"l\":[3,6]},\n",
     "#         \"pop_cuts\": {\"age\": [4,7]}\n",
     "#     },\n",
@@ -1784,16 +1812,16 @@
     "#         \"pop_cuts\": {\"age\":[9.5,10]},\n",
     "\n",
     "#     },\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[1.5,2],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\": [4,7]}\n",
-    "    },\n",
-    "    {\n",
-    "        \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[1.5,2],\"l\":[-2,2]},\n",
-    "        \"pop_cuts\": {\"age\" :[9.5,10]},\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[1.5,2],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\": [4,7]}\n",
+    "#     },\n",
+    "#     {\n",
+    "#         \"spatial_cuts\": {\"R\":[0,3.5],\"b\":[1.5,2],\"l\":[-2,2]},\n",
+    "#         \"pop_cuts\": {\"age\" :[9.5,10]},\n",
     "\n",
-    "    }\n",
-    "]\n",
+    "#     }\n",
+    "];\n",
     "\n",
     "for dic in all_dicts: # check there are enough stars\n",
     "    star_number = len(MF.apply_cuts_to_df(df0, cuts_dict=[dic[\"spatial_cuts\"],dic[\"pop_cuts\"]]))\n",
@@ -1808,22 +1836,12 @@
     "    for func in function_dict:\n",
     "        print(func)\n",
     "        \n",
-    "        if save_sample_bootstrap_errors:\n",
-    "            standard_errors,_,_,bootstrap_errors =\\\n",
-    "                get_standard_error_and_bootstrap_errors(df=df,function=function_dict[func],repeat=repeats,sampling_sizes=sampling_sizes,\\\n",
-    "                                    tilt=func==\"tilt_abs\")\n",
+    "        if save_bootstrap_errors:\n",
+    "            res_recursive = bootstrap_multiple_sampling_sizes_recursive(df=df,function=function_dict[func],sampling_sizes=sampling_sizes,\\\n",
+    "                                                                        config=sampling_config, nested_config=bootstrap_config)\n",
     "            \n",
-    "            dic[func+\"_bootstrap_errors\"] = bootstrap_errors.tolist()\n",
     "        else:\n",
-    "            standard_errors,*_ =\\\n",
-    "                get_sampling_errors(df=df,function=function_dict[func],repeat=repeats,sampling_sizes=sampling_sizes,\\\n",
-    "                                    tilt=func==\"tilt_abs\")\n",
-    "            \n",
-    "        dic[func+\"_errors\"] = list(standard_errors)\n",
-    "        \n",
-    "        dic[func] = function_dict[func](df.vr.values,df.vl.values)\n",
-    "        \n",
-    "        print(\"True value:\",dic[func])\n",
+    "            res = bootstrap_multiple_sampling_sizes(df=df,function=function_dict[func],repeat=repeats,sampling_sizes=sampling_sizes,config=sampling_config)\n",
     "        \n",
     "        if save_bootstrap_bool:\n",
     "            dic[func+\"_bootstrap_error\"],*_ = get_sampling_errors(df=df,function=function_dict[func],sampling_sizes=[len(df)],repeat=repeats,\\\n",
@@ -1854,7 +1872,7 @@
     "        \n",
     "        print(\"\\n\")\n",
     "    \n",
-    "    if True: # save as json\n",
+    "    if True: # general filename\n",
     "        save_path = get_save_path_spatial_cuts(base_path=base_path,spatial_cuts=dic[\"spatial_cuts\"])\n",
     "\n",
     "        if list(function_dict.keys()) == [\"anisotropy\",\"correlation\",\"tilt_abs\"]:\n",
@@ -1867,27 +1885,20 @@
     "        filename += f\"_{repeats}repeats\"\n",
     "        filename += f\"_{min(sampling_sizes)}size{max(sampling_sizes)}\"\n",
     "        filename += f\"_{len(sampling_sizes)}steps\" + (\"Log\" if logSampling else \"\")\n",
-    "        \n",
-    "        if save_sample_bootstrap_errors:\n",
-    "            filename += \"_sampleBootErrors\"\n",
-    "        \n",
-    "        if save_bootstrap_bool:\n",
-    "            filename += \"_popBootError\"\n",
-    "            \n",
-    "        if save_MC_bool:\n",
-    "            filename += \"_popMCError\"\n",
     "\n",
-    "        MF.save_dic_as_json(dic=dic, filename=save_path+filename)\n",
+    "        print(\"General filename:\",filename)\n",
+    "        print(\"Saving in\",save_path)\n",
     "        \n",
-    "        print(\"Saved dic as\",filename+\".json\")\n",
-    "        print(\"In\",save_path)\n",
+    "    if True: # save arrays\n",
+    "        \n",
+    "        \n",
     "    \n",
     "    print(\"\\n\") "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "96",
+   "id": "97",
    "metadata": {},
    "source": [
     "### Plot"
@@ -1896,7 +1907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1911,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,7 +1963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99",
+   "id": "100",
    "metadata": {},
    "source": [
     "#### In bulk"
@@ -1961,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2168,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2195,7 +2206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2238,7 +2249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2259,20 +2270,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "105",
+   "id": "106",
    "metadata": {},
    "source": [
     "#### Individually"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "106",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_path = general_path+\"graphs/other_plots/standard_error/\""
    ]
   },
   {
@@ -2282,13 +2283,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repeats = 1000"
+    "base_path = general_path+\"graphs/other_plots/standard_error/\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "108",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repeats = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2319,7 +2330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2381,7 +2392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2412,7 +2423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2445,7 +2456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2461,7 +2472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2474,7 +2485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2493,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2524,7 +2535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2541,7 +2552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2559,7 +2570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2581,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2599,7 +2610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2609,7 +2620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2620,7 +2631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2872,7 +2883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": []
