update loading method

--- a/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
+++ b/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
@@ -409,15 +409,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_df = pd.DataFrame([[1,2],[4,3]],columns=['a','b'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "print(general_path)"
    ]
   },
@@ -427,16 +418,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "zabs = True\n",
+    "# zabs = False\n",
+    "\n",
     "R0 = 8.1\n",
     "\n",
-    "np_path = general_path+f\"data/708main_simulation/numpy_arrays/R0_{R0}/\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Non-axisymmetric**"
+    "GSR = True\n",
+    "# GSR = False"
    ]
   },
   {
@@ -445,7 +433,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df0 = load_sim.load_simulation(np_path,GSR=GSR,R0=R0,zabs=zabs,pos_factor=pos_factor,axisymmetric=False)"
+    "sim_choice = \"708main\"\n",
+    "\n",
+    "rot_angle = 27\n",
+    "axisymmetric = False\n",
+    "pos_scaling = 1.7\n",
+    "\n",
+    "filename = load_sim.build_filename(choice=sim_choice,rot_angle=rot_angle,R0=R0,axisymmetric=axisymmetric,zabs=zabs,pos_factor=pos_scaling,GSR=GSR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np_path = general_path+f\"data/{sim_choice}/numpy_arrays/\"\n",
+    "        \n",
+    "df0 = load_sim.load_simulation(path=np_path,filename=filename)"
    ]
   },
   {
@@ -498,40 +503,6 @@
    "outputs": [],
    "source": [
     "MP.visually_inspect_bar_angle(df0, xymax=5,zmin=0.5,age_lims=[4,7],bins=50)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Load axisymmetric**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "axi_df = load_sim.load_simulation(np_path,GSR=GSR,R0=R0,zabs=zabs,pos_factor=pos_factor,axisymmetric=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MP.quick_show_xy_xz(axi_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MP.visually_inspect_bar_angle(axi_df, xymax=5,zmin=0.5,age_lims=[4,7],bins=50)"
    ]
   },
   {
